--- a/contracts/beca/Cargo.toml
+++ b/contracts/beca/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "beca-manager"
+name = "beca"
 version = "0.1.0"
 edition = "2021"
 publish = false
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"] 
 doctest = false
 
 [dependencies]
