--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "@stellar/stellar-sdk": "^11.3.0",
+    "buffer": "6.0.3",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
